Major internal refactoring
Added HDF5 types
Resolve registered types
Refactoring unit and functional tests
Exploring APIs and internal structures
Handle values and arrays

--- a/testing/functional/bindings/CXX17/meson.build
+++ b/testing/functional/bindings/CXX17/meson.build
@@ -2,23 +2,26 @@
 #  Created on: May 19, 2020
 #      Author: William F Godoy godoywf@ornl.gov
 
-functional_tests = ['cxx17NCIO.cpp']
 
-foreach functional_test : functional_tests
-  exe = executable('functionaltest-ncio-'+functional_test, 
-                   'functionalTest_' + functional_test,
+tests = ['NCIO']
+
+foreach test : tests
+  exe = executable('functionaltest-cxx17-' + test, 
+                   'functionalTest_cxx17' + test + '.cpp',
                    include_directories:  ncio_doctest_inc, 
                    dependencies: [ncio_cxx17_dep, doctest_dep])
-  test(functional_test, exe, timeout: 10)
+  test(test, exe, timeout: 10, suite: ['functionaltest', 'cxx17'] )
 endforeach
 
 
-foreach ncio_schema : ncio_schemas 
-  exe = executable('functionaltest-ncio-schema-' + ncio_schema.to_lower(), 
-                   'schema/' + 
-                   ncio_schema.to_lower() + 
-                   '/functionalTest_cxx17DataDescriptor' + ncio_schema + '.cpp',
+foreach ncio_schema : ncio_schemas
+  
+  test = ncio_schema.to_lower()
+  file_name = 'schema' / test / 'functionalTest_cxx17DataDescriptor' + ncio_schema + '.cpp'
+  
+  exe = executable('functionaltest-cxx17-schema-' + test, 
+                   file_name,
                    include_directories:  ncio_doctest_inc, 
                    dependencies: [ncio_cxx17_dep, doctest_dep])
-  test(ncio_schema, exe, timeout: 10)
+  test( test, exe, timeout: 10, suite: ['functionaltest', 'cxx17', 'schema'])
 endforeach
