--- a/testing/unit/meson.build
+++ b/testing/unit/meson.build
@@ -1,13 +1,22 @@
-# MESON unit tests executables
-#  Created on: May 11, 2020
-#      Author: William F Godoy godoywf@ornl.gov
 
-unit_tests = ['unitTest_NCIO.cpp']
+# key: suite, value: list of tests
+unit_tests = { 'core' : ['NCIO'], 
+               'helper' : ['ncioHelperString']
+             }
 
-foreach unit_test : unit_tests
-  exe = executable('unittest-ncio-core-NCIO', 
-                   'ncio/core/' + unit_test,
-                   include_directories:  ncio_doctest_inc, 
-                   dependencies: [ncio_dep, doctest_dep])
-  test(unit_test, exe, timeout: 10)
+foreach key, value: unit_tests
+  
+  suite = key
+
+  foreach test: value
+    file_name = 'ncio' / suite / 'unitTest_' + test + '.cpp'
+     
+    exe = executable('unittest-' + suite + '-' + test, 
+                     file_name,
+                     include_directories:  ncio_doctest_inc, 
+                     dependencies: [ncio_dep, doctest_dep])
+    test(test, exe, timeout: 10, suite: ['unittest', suite] )
+   
+  endforeach
+   
 endforeach
