update run_setup and setup_win to python 3.9.0

--- a/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
+++ b/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
@@ -1,5 +1,6 @@
 FROM centos:centos7
 LABEL William F Godoy williamfgc@yahoo.com
+LABEL Mark Abraham markabraham3232@gmail.com 
 
 RUN set -x  \
   && echo "[SCL-core]"                                                                                         > /etc/yum.repos.d/CentOS-Base.repo \
