Enable write read array data with HDF5
Write Nexus array
Add h5 files to gitignore

--- a/testing/functional/bindings/CXX17/meson.build
+++ b/testing/functional/bindings/CXX17/meson.build
@@ -3,7 +3,7 @@
 #      Author: William F Godoy godoywf@ornl.gov
 
 
-tests = ['NCIO']
+tests = ['NCIO', 'DataDescriptor']
 
 foreach test : tests
   exe = executable('functionaltest-cxx17-' + test, 
