--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -4,10 +4,10 @@ name: GitHub Actions
 on: 
   push: 
     branches: 
-    - master 
+    - main 
   pull_request: 
     branches: 
-    - master 
+    - main 
 
 jobs:
 
