Fixed two memory bugs and index string lengths

--- a/meson.build
+++ b/meson.build
@@ -8,7 +8,7 @@ project('ncio',
         license: 'BSD 3-Clause',
         version: '0.0.1',
         meson_version: '>=0.52.0',
-        default_options: ['cpp_std=c++17', 'buildtype=debug', 'layout=flat']
+        default_options: ['cpp_std=c++17', 'buildtype=release', 'layout=flat']
 )
 
 # SCHEMAS
