Reorganize testing directory
Separate ci and regression tests
Added ci as test suite
Start regression test definitions and skeleton

--- a/meson.build
+++ b/meson.build
@@ -47,6 +47,11 @@ subdir('bindings')
 # Tests
 if get_option('build-tests')
   doctest_dep = dependency('doctest', fallback: ['doctest', 'doctest_dep'])
+  
+  if get_option('build-tests-regression')
+    ncio_data_dep = dependency('ncio-data', fallback: ['ncio-data', 'ncio_data_dep'])
+  endif
+  
   subdir('testing')
 endif
 
