--- a/testing/ci/unit/meson.build
+++ b/testing/ci/unit/meson.build
@@ -6,16 +6,16 @@ unit_tests = { 'core' : ['NCIO'],
 
 foreach key, value: unit_tests
   
-  suite = key
+  minisuite = key
 
   foreach test: value
-    file_name = 'ncio' / suite / 'unitTest_' + test + '.cpp'
+    file_name = 'ncio' / minisuite / 'unitTest_' + test + '.cpp'
      
-    exe = executable('unittest-' + suite + '-' + test, 
+    exe = executable('unittest-' + minisuite + '-' + test, 
                      file_name,
                      include_directories:  ncio_doctest_inc, 
                      dependencies: [ncio_dep, doctest_dep])
-    test(test, exe, timeout: 10, suite: ['unittest', suite] )
+    test(test, exe, timeout: 10, suite: ['ci','unittest', minisuite] )
    
   endforeach
    
