--- a/testing/meson.build
+++ b/testing/meson.build
@@ -2,5 +2,8 @@
 # to find the common ncio-doctest.h 
 ncio_doctest_inc = include_directories('.')
 
-subdir('unit')
-subdir('functional')
+subdir('ci')
+
+if get_option('build-tests-regression')
+  subdir('regression')
+endif
