Testing github actions scripts

--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -8,7 +8,8 @@ on:
   pull_request:
     paths-ignore:
     - 'scripts/**'
-    - '!scripts/ci/github-actions/**' 
+    - '!scripts/ci/github-actions/**'
+    - '.github/workflows/nightly-github-actions.yaml'
     branches: 
     - main 
 
