--- a/.github/workflows/nightly-github-actions.yaml
+++ b/.github/workflows/nightly-github-actions.yaml
@@ -3,7 +3,7 @@ name: GitHub Actions Nightly
 
 on: 
   schedule:
-    - cron: '* 16 * * *' # run at 9 PM UTC (4 PM EST) 
+    - cron: '10 16 * * *' # run at 9 PM UTC (4 PM EST) 
 
 jobs:
 
