--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -6,10 +6,6 @@ on:
     branches: 
     - main
   pull_request:
-    paths-ignore:
-    - 'scripts/**'
-    - '!scripts/ci/github-actions/**'
-    - '.github/workflows/nightly-github-actions.yaml'
     branches: 
     - main 
 
@@ -18,6 +14,7 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     env:
       GH_JOBNAME: ${{ matrix.jobname }}
       GH_OS: Linux
@@ -67,6 +64,7 @@ jobs:
 
   macos:
     runs-on: macos-latest
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     env:
       GH_YML_JOBNAME: ${{ matrix.jobname }}
       GH_YML_OS: macOS
@@ -100,6 +98,7 @@ jobs:
 
   windows:
     runs-on: windows-2019
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     env:
       GH_YML_JOBNAME: ${{ matrix.jobname }}
       GH_YML_OS: windows
@@ -137,6 +136,7 @@ jobs:
   dynamic:
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     env:
       GH_JOBNAME: ${{ matrix.jobname }}
     strategy:
@@ -204,6 +204,7 @@ jobs:
   static:
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
     env:
       GH_JOBNAME: ${{ matrix.jobname }}
     strategy:
