Enable git lfs in nightly [ci skip]

--- a/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
+++ b/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
@@ -17,7 +17,7 @@ RUN yum update -y &&\
     yum install http://opensource.wandisco.com/centos/7/git/x86_64/wandisco-git-release-7-2.noarch.rpm -y &&\
 # ninja-build 8
     yum install http://repo.okay.com.mx/centos/7/x86_64/release/okay-release-1-1.noarch.rpm -y &&\
-    yum install git ninja-build python3-pip hdf5-devel pkg-config which -y &&\   
+    yum install git git-lfs ninja-build python3-pip hdf5-devel pkg-config which -y &&\   
     pip3 install meson &&\
 # enable gcc and clang compilers
     echo "source scl_source enable devtoolset-8" >> ~/.bash_profile &&\
