Update dockerfile centos7 and ubuntu18
Fix meson to version 0.56
Correct bug in echo
Add git-lfs for nightly tests

--- a/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
+++ b/scripts/ci/dockerhub/centos7-gcc8-clang6.0/Dockerfile
@@ -3,7 +3,7 @@ LABEL William F Godoy williamfgc@yahoo.com
 LABEL Mark Abraham markabraham3232@gmail.com 
 
 RUN set -x  \
-  && echo "[SCL-core]"                                                                                         > /etc/yum.repos.d/CentOS-Base.repo \
+  && echo "[SCL-core]"                                                                                         >> /etc/yum.repos.d/CentOS-Base.repo \
   && echo "name=Springdale SCL Base \$releasever - \$basearch"                                                  >> /etc/yum.repos.d/CentOS-Base.repo \
   && echo "mirrorlist=http://springdale.princeton.edu/data/springdale/SCL/\$releasever/\$basearch/mirrorlist"   >> /etc/yum.repos.d/CentOS-Base.repo \
   && echo "#baseurl=http://springdale.princeton.edu/data/springdale/SCL/\$releasever/\$basearch"                >> /etc/yum.repos.d/CentOS-Base.repo \
@@ -11,6 +11,7 @@ RUN set -x  \
 
 RUN yum update -y &&\
     yum upgrade -y &&\
+    cat /etc/yum.repos.d/CentOS-Base.repo &&\
     yum install centos-release-scl -y &&\
     yum install devtoolset-8-gcc devtoolset-8-gcc-c++ llvm-toolset-6.0 -y &&\
 # git 2.x
@@ -18,7 +19,7 @@ RUN yum update -y &&\
 # ninja-build 8
     yum install http://repo.okay.com.mx/centos/7/x86_64/release/okay-release-1-1.noarch.rpm -y &&\
     yum install git git-lfs ninja-build python3-pip hdf5-devel pkg-config which -y &&\   
-    pip3 install meson &&\
+    pip3 install meson==0.56 &&\
 # enable gcc and clang compilers
     echo "source scl_source enable devtoolset-8" >> ~/.bash_profile &&\
     echo "source scl_source enable llvm-toolset-6.0" >> ~/.bash_profile &&\
