--- a/.github/workflows/nightly-github-actions.yaml
+++ b/.github/workflows/nightly-github-actions.yaml
@@ -3,7 +3,7 @@ name: GitHub Actions Nightly
 
 on: 
   schedule:
-    - cron: '*/5 * * * *' # run at 9 PM UTC (4 PM EST) 
+    - cron: '15 3 * * *' # run at 3:15 AM UTC daily
 
 jobs:
 
