Add Get std::vector and GetShape signatures
Get std::vector allows automatic reallocation if required, doesn't allow
SIMD due to reallocation.
GetShape returns the Shape of an entry if outside allocation is required
Added functional and unit tests

--- a/source/ncio/meson.build
+++ b/source/ncio/meson.build
@@ -47,6 +47,7 @@ ncio_sources = ['core/NCIO.cpp',
                 
                 'helper/ncioHelperString.cpp',
                 'helper/ncioHelperTypes.cpp',
+                'helper/ncioHelperMath.cpp',
                 
                 'transport/Transport.cpp',
                 'transport/TransportNull.cpp']
