--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -5,10 +5,6 @@ on:
   issue_comment:
     types: [created]
   
-  push:
-    branches: 
-    - main
-  
 jobs:
 
   linux_pr_comment:
@@ -16,9 +12,8 @@ jobs:
     if: | 
         github.repository_owner == 'ORNL' &&
         github.actor == 'williamfgc' &&
-        ( ( github.event.issue.pull_request && 
-            contains(github.event.comment.body, 'Test this please') ) ||
-          github.event_name == 'push' )
+        github.event.issue.pull_request && 
+        contains(github.event.comment.body, 'Test this please')
 
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
