--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -12,8 +12,6 @@ jobs:
     if: | 
         github.repository_owner == 'ORNL' &&
         github.actor == 'williamfgc' &&
-        github.event.issue.pull_request && 
-        contains(github.event.comment.body, 'Test this please')
 
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
@@ -33,6 +31,11 @@ jobs:
             options: -u root
        
     steps:
+    - uses: khan/pull-request-comment-trigger@master
+        id: check
+        with:
+          trigger: 'Test this please'
+    
     - name: PR info
       run:  |
             echo -e "Comment on PR #${{ github.event.issue.number }}\n" \
