Try triggering PR checks

--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -2,9 +2,6 @@
 name: GitHub Actions manual CI
 
 on:
-  pull_request:
-    types: [opened]
-    
   issue_comment:
     types: [created]
   
@@ -13,7 +10,9 @@ jobs:
   linux_pr_comment:
     if: | 
         github.repository_owner == 'ORNL' &&
-        github.actor == 'williamfgc'
+        github.actor == 'williamfgc' &&
+        contains(github.event.comment.body, 'Test this please') &&
+        github.event.issue.pull_request
 
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
@@ -34,14 +33,6 @@ jobs:
        
     steps:
     
-    - name: Comment on PR
-      uses: khan/pull-request-comment-trigger@master
-      id: check
-      with:
-        trigger: 'Test this please'
-      env:
-        GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-        
     - name: Github API Request
       id: request
       uses: octokit/request-action@v2.0.0
