--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -27,6 +27,14 @@ jobs:
             options: -u root
        
     steps:
+    - uses: LouisBrunner/checks-action@v1.1.1
+      if: always()
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        name: Test Manual Start
+        conclusion: ${{ job.status }}
+        sha: ${GITHUB_SHA}
+    
     - uses: khan/pull-request-comment-trigger@master
       id: check
       if: github.actor == 'williamfgc'
@@ -34,7 +42,6 @@ jobs:
         trigger: 'Test this please'
     
     - name: Github API Request
-      if: steps.check.outputs.triggered == 'true'
       id: request
       uses: octokit/request-action@v2.0.0
       with:
@@ -43,7 +50,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
     - name: Get PR informations
-      if: steps.check.outputs.triggered == 'true'
       id: pr_data
       run: |
           echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
@@ -52,7 +58,6 @@ jobs:
           echo "::set-output name=repo_ssh_url::${{ fromJson(steps.request.outputs.data).head.repo.ssh_url }}"
           
     - name: Checkout PR Branch
-      if: steps.check.outputs.triggered == 'true'
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -60,19 +65,15 @@ jobs:
         ref: ${{ steps.pr_data.outputs.branch }}
         
     - name: Configure
-      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh configure
 
     - name: Build
-      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh build
 
     - name: Test
-      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh test
 
     - name: Install
-      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh install
     
     - uses: LouisBrunner/checks-action@v1.1.1
@@ -81,4 +82,5 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         name: Test Manual
         conclusion: ${{ job.status }}
+        sha: ${GITHUB_SHA}
     
