--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -48,6 +48,7 @@ jobs:
         name: Test Manual
         status: queued
         sha: ${{ fromJson(steps.request.outputs.data).head.sha }}
+        details_url: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
         
     - name: Get PR informations
       id: pr_data
@@ -83,4 +84,5 @@ jobs:
         name: Test Manual
         conclusion: ${{ job.status }}
         sha: ${{ fromJson(steps.request.outputs.data).head.sha }}
+        details_url: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
     
